Add a number of UI elements, an error message, and will reject results that were appearing in the second and third position even though their return value was less than zero.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <p id="intro"><em>Do you ever wonder which path you should take to find a job as a developer in the technology field? What language should you focus on? Who will hire <strong>you?</strong> These questions can be overwhelming. </em></p>
             <br>
             <div id="mission">
-              <p>We've developed a "scientifically" proven method to determine where you should focus your energies. Instead of asking a square peg to fit in a round hole, we've centered the question around you. Which language best fits you?</p>
-              <p>Please take our quick survey and we'll help you find a programming language that is "guaranteed" to match your personality.</p>
+              <p>We've developed a "scientifically" proven method to determine where you should focus your energies. Instead of asking a square peg to fit in a round hole, we've centered the question around you. Which language best fits you? Please take our quick survey and we'll help you find a programming language that is "guaranteed" to match your personality.</p>
             </div>
             <div class="row" id="questions">
               <div class="col-md-6">
@@ -96,68 +95,75 @@
       </div>
     </div>
     <div class="row" id="results-row">
-      <h2>Try one of these:</h2>
-      <div class="col-12 results-col">
+      <div class="row">
 
-        <div class="card" id="ruby">
-          <img class="card-img-top" src="img/ruby.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Ruby</h5>
-            <a href="https://www.ruby-lang.org/en/" class="btn btn-primary" target="_blank">info</a>
+        <h2 id="results-header">Try one of these:</h2>
+        <p id="disclaimer">Please answer some questions so that we can make a personalized recommendation for you</p>
+        <div class="col-12 results-col">
+
+          <div class="card" id="ruby">
+            <img class="card-img-top" src="img/ruby.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Ruby</h5>
+              <a href="https://www.ruby-lang.org/en/" class="btn btn-primary" target="_blank">info</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card" id="csharp">
-          <img class="card-img-top" src="img/csh.svg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">C#</h5>
-            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/" class="btn btn-primary target="_blank"">info</a>
+          <div class="card" id="csharp">
+            <img class="card-img-top" src="img/csh.svg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">C#</h5>
+              <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/" class="btn btn-primary target="_blank"">info</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card" id="javascript">
-          <img class="card-img-top" src="img/js.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">JavaScript</h5>
-            <a href="https://www.javascript.com/" class="btn btn-primary" target="_blank">info</a>
+          <div class="card" id="javascript">
+            <img class="card-img-top" src="img/js.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">JavaScript</h5>
+              <a href="https://www.javascript.com/" class="btn btn-primary" target="_blank">info</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card" id="go">
-          <img class="card-img-top" src="img/go.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Go</h5>
-            <a href="https://golang.org/" class="btn btn-primary" target="_blank">info</a>
+          <div class="card" id="go">
+            <img class="card-img-top" src="img/go.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Go</h5>
+              <a href="https://golang.org/" class="btn btn-primary" target="_blank">info</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card" id="python">
-          <img class="card-img-top" src="img/python.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Python</h5>
-            <a href="https://www.learnpython.org/" class="btn btn-primary" target="_blank">info</a>
+          <div class="card" id="python">
+            <img class="card-img-top" src="img/python.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Python</h5>
+              <a href="https://www.learnpython.org/" class="btn btn-primary" target="_blank">info</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card" id="rust">
-          <img class="card-img-top" src="img/rusty.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Rust</h5>
-            <a href="https://www.rust-lang.org/" class="btn btn-primary" target="_blank" >info</a>
+          <div class="card" id="rust">
+            <img class="card-img-top" src="img/rusty.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Rust</h5>
+              <a href="https://www.rust-lang.org/" class="btn btn-primary" target="_blank" >info</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card" id="swift">
-          <img class="card-img-top" src="img/swift.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Swift</h5>
-            <a href="https://swift.org/" class="btn btn-primary" target="_blank">info</a>
+          <div class="card" id="swift">
+            <img class="card-img-top" src="img/swift.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Swift</h5>
+              <a href="https://swift.org/" class="btn btn-primary" target="_blank">info</a>
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="button">
-        <button class="submit" type="button" name="button" id="reset"><strong>Reset</strong></button>
+      <div class="row">
+        <div class="col-12">
+          <div class="button">
+            <button class="submit" type="button" name="button" id="reset"><strong>Reset</strong></button>
+          </div>
+        </div>
       </div>
 
     </div>
