--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row" id="top-row">
       <div class="col-md-12">
         <div class="container">
-        <h1>What Programming<br>Language Fits You?</h1>
+          <h1>What Programming<br>Language Fits You?</h1>
         </div>
       </div>
     </div>
@@ -28,140 +28,154 @@
             <p id="intro"><em>Do you ever wonder which path you should take to find a job as a developer in the technology field? What language should you focus on? Who will hire <strong>you?</strong> These questions can be overwhelming. </em></p>
             <br>
             <div id="mission">
-              <p>We've developed a "scientifically" proven method to determine where you should focus your energies. Instead of asking a square peg to fit in a round hole, we've centered the question around you. Which language best fits you? Please take our quick survey and we'll help you find a programming language that is "guaranteed" to match your personality.</p>
+              <p>We've developed a "scientifically" proven method to determine where you should focus your energies. Instead of asking a square peg to fit in a round hole, we've centered the question around you. Which language best fits you? Please
+                take our quick survey and we'll help you find a programming language that is "guaranteed" to match your personality.</p>
             </div>
-            <div class="row" id="questions">
-              <div class="col-md-6">
-                <div class="survey-q" id="q1-content">
-                  <h4>Do you like animals?</h4>
-                  <div class="form-group">
-                    <select class="form-control" id="q1-ui">
+            <form id="form">
+              <div class="row" id="questions">
+                <div class="col-md-6">
+                  <div class="survey-q" id="q1-content">
+                    <h4>Do you like animals?</h4>
+                    <div class="form-group">
+                      <select class="form-control" id="q1-ui">
+                        <option value="">please choose one</option>
+                        <option value="1">Heck yeah!</option>
+                        <option value="-1">I've got an allergy...</option>
+                        <option value="2">omg, I NEED the cuddles all the time!</option>
+                        <option value="-2">Animals can go to #%*@!! (and I'm a terrible person)</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="survey-q" id="q2-content">
+                    <h4>What color do you prefer?</h4>
+                    <select class="form-control" id="q2-ui">
                       <option value="">please choose one</option>
-                      <option value="1">Heck yeah!</option>
-                      <option value="-1">I've got an allergy...</option>
-                      <option value="2">omg, I NEED the cuddles all the time!</option>
-                      <option value="-2">Animals can go to #%*@!! (and I'm a terrible person)</option>
+                      <option value="r">Red</option>
+                      <option value="p">Purple</option>
+                      <option value="b">Blue</option>
+                      <option value="y">Yellow</option>
+                      <option value="t">I care more about textures...</option>
+                    </select>
+                  </div>
+                  <div class="survey-q" id="q5-content">
+                    <h4>Choose a Motto</h4>
+                    <select class="form-control" id="q5-ui">
+                      <option value="">please choose one</option>
+                      <option value="m1">Do you even code-bruh?</option>
+                      <option value="m2">Sometimes you’re the windshield, sometimes you’re the bug!</option>
+                      <option value="m3">If you can’t convince them, confuse them…</option>
                     </select>
                   </div>
                 </div>
-                <div class="survey-q" id="q2-content">
-                  <h4>What color do you prefer?</h4>
-                  <select class="form-control" id="q2-ui">
-                    <option value="">please choose one</option>
-                    <option value="r">Red</option>
-                    <option value="p">Purple</option>
-                    <option value="b">Blue</option>
-                    <option value="y">Yellow</option>
-                    <option value="t">I care more about textures...</option>
-                  </select>
+                <div class="col-md-6">
+                  <div class="survey-q" id="q4-content">
+                    <h4>How long do you like your names?</h4>
+                    <select class="form-control" id="q4-ui">
+                      <option value="">please choose one</option>
+                      <option value="s">Short: Abbreviations are even better</option>
+                      <option value="m">Medium: Enough letters to stand out</option>
+                      <option value="l">Long: Give me a mouthfull.</option>
+                    </select>
+                  </div>
+                  <div class="survey-q" id="q3-content">
+                    <h4>Think of a shape. Could I roll it down a hill?</h4>
+                    <select class="form-control" id="q3-ui">
+                      <option value="">please choose one</option>
+                      <option value="hard">It would be hard</option>
+                      <option value="easy">It would be easy</option>
+                    </select>
+                  </div>
+                  <div class="button">
+                    <button class="submit" type="button" name="button" id="submit"><strong>Submit</strong></button>
+                  </div>
                 </div>
-                <div class="survey-q" id="q3-content">
-                  <h4>How easily could I roll your preferred shape down a hill?</h4>
-                  <select class="form-control" id="q3-ui">
-                    <option value="">please choose one</option>
-                    <option value="hard">It would be hard</option>
-                    <option value="easy">It would be easy</option>
-                  </select>
-                </div>
+                <br><br>
               </div>
-              <div class="col-md-6">
-                <div class="survey-q" id="q4-content">
-                  <h4>Do you prefer short, medium or long names?</h4>
-                  <select class="form-control" id="q4-ui">
-                    <option value="">please choose one</option>
-                    <option value="s">Short: Abbreviations are even better</option>
-                    <option value="m">Medium: Enough letters to stand out</option>
-                    <option value="l">Long: Give me a mouthfull.</option>
-                  </select>
-                </div>
-                <div class="survey-q" id="q5-content">
-                  <h4>Choose a Motto</h4>
-                  <select class="form-control" id="q5-ui">
-                    <option value="">please choose one</option>
-                    <option value="m1">Do you even code-bruh?</option>
-                    <option value="m2">Sometimes you’re the windshield, sometimes you’re the bug!</option>
-                    <option value="m3">If you can’t convince them, confuse them…</option>
-                  </select>
-                </div>
-                <div class="button">
-                  <button class="submit" type="button" name="button" id="submit"><strong>Submit</strong></button>
-                </div>
-              </div>
-              <br><br>
-            </div>
-
+            </form>
           </div>
         </div>
       </div>
     </div>
     <div class="row" id="results-row">
-      <div class="row">
 
+      <div class="row">
         <h2 id="results-header">Try one of these:</h2>
         <p id="disclaimer">Please answer some questions so that we can make a personalized recommendation for you</p>
-        <div class="col-12 results-col">
+      </div>
 
+      <div class="row" id="card-display">
+
+        <div class="col-12 results-col">
           <div class="card" id="ruby">
             <img class="card-img-top" src="img/ruby.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Ruby</h5>
-              <a href="https://www.ruby-lang.org/en/" class="btn btn-primary" target="_blank">info</a>
+              <a href="https://www.ruby-lang.org/en/" class="btn btn-primary" target="_blank">
+                <h5 class="card-title">Ruby</h5>
+              </a>
             </div>
           </div>
 
           <div class="card" id="csharp">
             <img class="card-img-top" src="img/csh.svg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">C#</h5>
-              <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/" class="btn btn-primary target="_blank"">info</a>
+              <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/" class="btn btn-primary target=" _blank"">
+                <h5 class="card-title">C#</h5>
+              </a>
             </div>
           </div>
 
           <div class="card" id="javascript">
             <img class="card-img-top" src="img/js.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">JavaScript</h5>
-              <a href="https://www.javascript.com/" class="btn btn-primary" target="_blank">info</a>
+              <a href="https://www.javascript.com/" class="btn btn-primary" target="_blank">
+                <h5 class="card-title">JavaScript</h5>
+              </a>
             </div>
           </div>
 
           <div class="card" id="go">
             <img class="card-img-top" src="img/go.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Go</h5>
-              <a href="https://golang.org/" class="btn btn-primary" target="_blank">info</a>
+              <a href="https://golang.org/" class="btn btn-primary" target="_blank">
+                <h5 class="card-title">Go</h5>
+              </a>
             </div>
           </div>
 
           <div class="card" id="python">
             <img class="card-img-top" src="img/python.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Python</h5>
-              <a href="https://www.learnpython.org/" class="btn btn-primary" target="_blank">info</a>
+              <a href="https://www.learnpython.org/" class="btn btn-primary" target="_blank">
+                <h5 class="card-title">Python</h5>
+              </a>
             </div>
           </div>
 
           <div class="card" id="rust">
             <img class="card-img-top" src="img/rusty.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Rust</h5>
-              <a href="https://www.rust-lang.org/" class="btn btn-primary" target="_blank" >info</a>
+              <a href="https://www.rust-lang.org/" class="btn btn-primary" target="_blank">
+                <h5 class="card-title">Rust</h5>
+              </a>
             </div>
           </div>
 
           <div class="card" id="swift">
             <img class="card-img-top" src="img/swift.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Swift</h5>
-              <a href="https://swift.org/" class="btn btn-primary" target="_blank">info</a>
+              <a href="https://swift.org/" class="btn btn-primary" target="_blank">
+                <h5 class="card-title">Swift</h5>
+              </a>
             </div>
           </div>
+
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
+
+      <div class="row" id="reset-row">
+        <div class="col-md-12">
           <div class="button">
-            <button class="submit" type="button" name="button" id="reset"><strong>Reset</strong></button>
+            <button class="submit" type="button" name="button" id="reset"><strong>Try Again</strong></button>
           </div>
         </div>
       </div>
